--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "apollo-boost": "^0.4.4",
     "classnames": "^2.2.6",
     "graphql": "^14.5.8",
+    "nanoid": "^2.1.7",
+    "random-js": "^2.1.0",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
