--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
+    "react-measure": "^2.3.0",
     "react-responsive": "^8.0.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-window-size-listener": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
