--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.4",
     "classnames": "^2.2.6",
-    "graphql": "^14.5.8",
     "nanoid": "^2.1.7",
     "random-js": "^2.1.0",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
-    "react-measure": "^2.3.0",
-    "react-responsive": "^8.0.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
-    "react-window-size-listener": "^1.5.4"
+    "react-uid": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
