--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
-    "react-uid": "^2.2.0"
+    "react-uid": "^2.2.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
